jwt and bycrypt

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://bhanuteja:bhanu512@cluster0.ey2rjvo.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=chai-aur-code
+REFRESH_TOKEN_SECRET=code-aur-chai
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_EXPIRY=10d
